Expected shouldn't assume its contained types are copyable https://bugs.webkit.org/show_bug.cgi?id=195986

Patch by Alex Christensen <achristensen@webkit.org> on 2019-03-25
Reviewed by JF Bastien.

Source/WebCore:

* contentextensions/ContentExtensionParser.cpp:
(WebCore::ContentExtensions::loadAction):

Source/WTF:

* wtf/Expected.h:
(std::experimental::fundamentals_v3::__expected_detail::constexpr_base::constexpr_base):
(std::experimental::fundamentals_v3::operator==):
(std::experimental::fundamentals_v3::operator!=):
* wtf/Unexpected.h:
(std::experimental::fundamentals_v3::unexpected::unexpected):

Tools:

* TestWebKitAPI/Tests/WTF/Expected.cpp:
(TestWebKitAPI::NonCopyable::operator== const):
(TestWebKitAPI::NonCopyable::operator!= const):
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/210541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243486 268f45cc-cd09-0410-ab3c-d52691b4dbfc